--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @import "node_modules/ol/ol.css";
 
-html, body {
+html,
+body {
   margin: 0;
   height: 100%;
 }
@@ -9,4 +10,16 @@ html, body {
   top: 0;
   bottom: 0;
   width: 100%;
+}
+#tools {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+}
+#tools a {
+  display: inline-block;
+  padding: 0.5rem;
+  color: #fff;
+  background-color: red;
+  cursor: pointer;
 }
